<resources>
    <string name="app_name">Radyo Bilkent</string>
    <string name="prompt_email">Enter email</string>
    <string name="prompt_username">Enter username</string>
    <string name="prompt_password">Enter password</string>
    <string name="prompt_password_confirm">Enter password again</string>
    <string name="login_text">LOG IN</string>
    <string name="register_text">SIGN IN</string>
    <string name="gender_label">Gender</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
        <item>Do not wish to disclose</item>
    </string-array>
    <string name="confirm_text">CONFIRM</string>
    <string name="or">or</string>

    <!--    voting session    -->
    <string name="voting_active">VOTING SESSION IS ACTIVE\nCLICK TO VOTE</string>
    <string name="voting_inactive">VOTING SESSION FINISHED\nCLICK TO GO TO AUCTION</string>
    <string name="blogs_menu_title">Blogs</string>
    <string name="podcasts_menu_title">Podcasts</string>
    <string name="feedback_menu_title">Feedback</string>

    <!--    open in spotify   -->
    <string name="spotify_found">Open in Spotify</string>
    <string name="spotify_missing">Get Spotify</string>
</resources>
