<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:hint="@string/prompt_email" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/email_field"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_confirmation_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password_confirm"
        android:layout_below="@+id/password_field"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_confirmation_field"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_text" />

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button"
        android:textAlignment="center"
        android:text="@string/or"
        android:textColor="@color/cardview_dark_background"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:id="@+id/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@id/or_text_view"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal" />


</RelativeLayout>