<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserInfoFragment">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="200dp"
        android:hint="@string/prompt_username"/>

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_field"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:text="@string/gender_label"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_field"
        android:layout_toEndOf="@+id/gender_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:entries="@array/genders"
        android:spinnerMode="dropdown"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_spinner"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_text" />

</RelativeLayout>